Begin header element layout

--- a/index.html
+++ b/index.html
@@ -8,10 +8,37 @@
     <body>
         <div id="dashboard">    
             <div id="sidebar">
-                <p>Dashboard</p>
+                <div id="title">
+                    <p>Dashboard</p>
+                </div>
+                <div id="navbar">
+                    <p>Home</p>
+                    <p>Profile</p>
+                    <p>Messages</p>
+                    <p>History</p>
+                    <p>Tasks</p>
+                    <p>Communities</p>
+                </div>
+                <div id="navbottom">
+                    <p>Settings</p>
+                    <p>Support</p>
+                    <p>Privacy</p>
+                </div>
             </div>
             <div id="header">
-                <p>search</p>
+                <div id="search">
+                    <input type="search" name="" id="">
+                </div>
+                <div>
+                    <p>Notif</p>
+                </div>
+                <div>
+                    <p>Profile Pic</p>
+                </div>
+                <div>
+                    <p>Morgan Oakley</p>
+                </div>
+                <div id="profile"></div>
             </div>
             <div id="main-content">
                 <p>Your Projects</p>
