Start main container grid layout

--- a/index.html
+++ b/index.html
@@ -26,22 +26,51 @@
                 </div>
             </div>
             <div id="header">
-                <div id="search">
-                    <input type="search" name="" id="">
+                <div id="header-top">
+                    <div id="search">
+                        <input type="search" name="" id="">
+                    </div>
+                    <div id="bell">
+                        <p>Notif</p>
+                    </div>
+                    <div id="pfp">
+                        <p>Profile Pic</p>
+                    </div>
+                    <div id="name">
+                        <p>Morgan Oakley</p>
+                    </div>
                 </div>
-                <div>
-                    <p>Notif</p>
+                <div id="header-botton">
+                    <div id="pfp-big">
+                        <p>Profile Pic (large)</p>
+                    </div>
+                    <div id="landing">
+                        <div id="welcome">
+                            Hi there,
+                        </div>
+                        <div id="username">
+                            <p>Morgan Oakley (@morgan)</p>
+                        </div>
+                        <div id="buttons">
+                            <button id="new">New</button>
+                            <button id="upload">Upload</button>
+                            <button id="share">Share</button>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <p>Profile Pic</p>
-                </div>
-                <div>
-                    <p>Morgan Oakley</p>
-                </div>
-                <div id="profile"></div>
             </div>
             <div id="main-content">
-                <p>Your Projects</p>
+                <div id="projects">
+                    <p>Your Projects</p>
+                </div>
+                <div id="main-sidebar">
+                    <div id="announcements">
+                        <p>announcements</p>
+                    </div>
+                    <div id="trending">
+                        <p>trending</p>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
